<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:padding="50dp"
        android:id="@+id/donate_table">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="30dp"
            android:id="@+id/paypal_row"
            android:weightSum="100">

            <TextView
                android:layout_column="1"
                android:layout_weight="30"
                android:width="0dp"
                android:text="@string/paypal_col_label"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_column="2"
                android:layout_weight="70"
                android:width="0dp"
                android:text="@string/paypal_name"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="30dp"
            android:id="@+id/venmo_row"
            android:weightSum="100">

            <TextView
                android:layout_width="0dp"
                android:layout_column="1"
                android:layout_weight="30"
                android:text="@string/venmo_col_label"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_column="2"
                android:layout_weight="70"
                android:width="0dp"
                android:text="@string/venmo_name"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </TableRow>
    </TableLayout>
    <FrameLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">
        <Button
            android:id="@+id/close_donate_modal"
            android:onClick="onTapDonateHide"
            android:layout_width="391dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginHorizontal="50dp"
            android:layout_marginBottom="100dp"
            android:text="@string/close_donate_modal"
            android:textSize="20sp" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>